--- a/AntApp/AntApp.csproj
+++ b/AntApp/AntApp.csproj
@@ -26,14 +26,15 @@
 
     <ItemGroup>
         <!-- App Icon -->
-        <MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg_fox2.svg" Color="#7e6fff" />
+        <MauiIcon Include="Resources\AppIcon\appicon.svg"
+            ForegroundFile="Resources\AppIcon\appiconfg.svg"
+            ForegroundScale="0.666" />
 
         <!-- Splash Screen -->
-        <MauiSplashScreen Include="Resources\Splash\splash_fox2.svg" Color="#7e6fff" />
+        <MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#7e6fff" />
 
         <!-- Images -->
         <MauiImage Include="Resources\Images\*" />
-        <MauiImage Update="Resources\Images\dotnet_bot.svg" BaseSize="168,208" />
 
         <!-- Custom Fonts -->
         <MauiFont Include="Resources\Fonts\*" />
@@ -46,7 +47,8 @@
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui"
+            Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
 
         <PackageReference Include="MudBlazor" Version="8.3.0" />
