--- a/AntWeb/AntWeb.csproj
+++ b/AntWeb/AntWeb.csproj
@@ -8,6 +8,10 @@
 
 
   <ItemGroup>
-    <PackageReference Include="MudBlazor" Version="8.3.0" />
+    <ProjectReference Include="../AntCore/Antcore.csproj" />
+
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.13" />
+
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
   </ItemGroup>
 </Project>
