--- a/AntWeb/appsettings.json
+++ b/AntWeb/appsettings.json
@@ -1,9 +1,31 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "Auth": {
+    "Jwt": {
+      "Issuer": "AntWeb",
+      "Audience": "AntApp",
+      "Key": ""
+    },
+    "Users": []
   },
-  "AllowedHosts": "*"
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "Enrich": [
+      "FromLogContext"
+    ],
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/antweb_.log",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
+  }
 }
