--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             // Use IntelliSense to find out which attributes exist for C# debugging
             // Use hover for the description of the existing attributes
             // For further information visit https://github.com/dotnet/vscode-csharp/blob/main/debugger-launchjson.md.
-            "name": ".NET Core Launch (web)",
+            "name": "AntWeb",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
@@ -27,9 +27,24 @@
             }
         },
         {
+            "name": "AntApp",
+            "type": "maui",
+            "request": "launch",
+            "preLaunchTask": "maui: Build"
+        },
+        {
             "name": ".NET Core Attach",
             "type": "coreclr",
             "request": "attach"
+        }
+    ],
+    "compounds": [
+        {
+            "name": "Ants",
+            "configurations": [
+                "AntWeb",
+                "AntApp"
+            ]
         }
     ]
 }
