--- a/AntApp/AntApp.csproj
+++ b/AntApp/AntApp.csproj
@@ -44,14 +44,16 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="../AntCore/Antcore.csproj" />
-
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 
         <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui"
             Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\AntCore\AntCore.csproj" />
     </ItemGroup>
 
 </Project>
