--- a/AntWeb/AntWeb.csproj
+++ b/AntWeb/AntWeb.csproj
@@ -8,6 +8,13 @@
 
 
   <ItemGroup>
-    <PackageReference Include="MudBlazor" Version="8.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.13" />
+
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <ProjectReference Include="..\AntCore\AntCore.csproj" />
   </ItemGroup>
 </Project>
